feat: 週次リセット報告と通知レイアウトの調整

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,9 @@ SQLITE_PATH=atcrank.db
 GUILD_ID=
 OPENAI_API_KEY=
 AI_MODEL=gpt-5-nano
+AI_MODEL_WEEKLY=gpt-5-mini
 POLL_INTERVAL_SECONDS=180
+INITIAL_FETCH_EPOCH=1768748400
 AI_PROBABILITY=20
 AI_ENABLED=true
 PROBLEMS_SYNC_INTERVAL_SECONDS=21600
