feat: AI通知コメントのマルチモデルテストに対応

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ SQLITE_PATH=atcrank.db
 GUILD_ID=
 OPENAI_API_KEY=
 AI_MODEL=gpt-5-nano
+AI_MODELS_NOTIFY=
 AI_MODEL_WEEKLY=gpt-5-mini
 POLL_INTERVAL_SECONDS=180
 INITIAL_FETCH_EPOCH=1768748400
